...
        android:text="Search Ingredient"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editIngredientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addIngredientTitle"
        android:hint="Name"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addIngredientConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editIngredientName"
        android:text="Search" />
</RelativeLayout>
