<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="5dp"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/ingredientImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="2dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/ingredientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/ingredientImageView"
                android:text="Line 1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ingredientExpiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Line 2"
                android:textSize="15sp"
                android:layout_below="@+id/ingredientName"
                android:layout_toEndOf="@+id/ingredientImageView"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/ingredientDelete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:src="@drawable/ic_baseline_delete_outline_24" />
        </RelativeLayout>
</androidx.cardview.widget.CardView>