...
            android:text="My Fridge"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
...
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fridgeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>
...
